-------------------------------------------------------------------------------------------------------
Release notes version 1.8.0_beta : Enhancements, modifications and corrected bugs since version 1.7.9 :
-------------------------------------------------------------------------------------------------------
21/08/19 (TRUST)  New keyword : Champ_Fonc_MED_Tabule to interpolate each time step among a list of fields from a MED file
20/08/19 (TRUST)  Portability : Fedora 30 and GNU compilers 9.0.1 supported

-------------------------------------------------------------------------------------------------------
Release notes version 1.7.9 : Enhancements, modifications and corrected bugs since version 1.7.8 :
-------------------------------------------------------------------------------------------------------
26/06/19 (TRUST)  Bug fixed   : Probes on polyhedral meshes
28/05/19 (TRUST)  New feature : 'Create_domaine_from_sous_zone' now propagates the zone information to the sub-domains.
28/05/19 (TRUST)  New keyword : 'Sous_domaine' and 'Union' partitioners, enabling the creation of conform partitions from sub-zones.
23/04/19 (TRUST)  New keyword : Block_Jacobi_ILU PETSc preconditioner (adapted to non symmetric linear system)
23/04/19 (TRUST)  New keyword : Cholesky_Mumps_BLR PETSc solver (reduced memory and faster factorization)
18/04/19 (TRUST)  New feature : Internal mesher is now able to build meshes with tanh variations in X and/or Y and/or Z directions.
18/04/19 (TRUST)  Minor change: Keywords tanh, tanh_dilatation and tanh_taille_premiere_maille are renamed to ytanh, ytanh_dilatation and ytanh_taille_premiere_maille
17/14/19 (TRUST)  New Option  : Allow the user to add a valgrind suppression file (-suppressions_val file_name)
16/04/19 (TRUST)  Bug fixed   : Fix of post-processing time for fields defined with Champ_Uniforme_Morceaux_Tabule_temps
04/04/19 (TRUST)  Portability : Fedora 29 and GNU compilers 8.2.1 supported