@@ -1,3 +1,4 @@
+XX/08/19 (TRUST)  Bug fixed   : Regression introduced in 1.7.7: using MED format post-processing during parallel calculation with empty zones crashed
 -------------------------------------------------------------------------------------------------------
 Release notes version 1.8.0_beta : Enhancements, modifications and corrected bugs since version 1.7.9 :
 -------------------------------------------------------------------------------------------------------
